[package]

name = "boo"
version = "0.0.1"
authors = ["Ben Blaxill <ben.blaxill@gmail.com>"]

[profile.dev]
opt-level = 2
debug = true
rpath = false
lto = false

[profile.release]
opt-level = 3
debug = false
rpath = false
lto = false

[profile.bench]
opt-level = 3
debug = false
rpath = false
lto = false

[profile.test]
opt-level = 3
debug = false
rpath = false
lto = true


[lib]
name = "boo"

